Fix color contrast

--- a/static/css/bestpapers.css
+++ b/static/css/bestpapers.css
@@ -71,7 +71,7 @@ p {
 a {
     text-decoration: none;
     /* border-bottom: 1px solid #ccc; */
-    color: #609701;
+    color: #518000;
 }
 
 .venue-row a {
@@ -153,7 +153,7 @@ footer {
 }
 
 .venue-sub {
-    color: #5c9100;
+    color: #518000;
     background: rgba(236, 240, 241, 0.7);
     font-size: 13px;
     padding: 3px 5px;
